# universal-knowledge-hub

./: .dockerignore  .env.example  .flake8  .gitignore  AUTHENTICATION_GUIDE.md  BACKEND_CORRECTED_TESTING_RESULTS.md  BACKEND_INDUSTRY_ANALYSIS.md  BULLETPROOF_TESTING_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETE_30_DAY_PROGRESS.md  COMPREHENSIVE_ISSUES_AND_SOLUTIONS_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_FRONTEND_GUIDE.md  Dockerfile  Dockerfile.frontend  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_VARIABLES_MIGRATION.md  FINAL_MAANG_IMPLEMENTATION_SUMMARY.md  GET_API_KEYS_GUIDE.md  HARDCODED_VALUES_REPORT.md  HUMAN_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LATEST_STABLE_TECH_STACK.md  LIVE_TESTING_RESULTS.md  LOCAL_DEV_SETUP.md  MAANG_CODING_STANDARDS.md  MAANG_IMPLEMENTATION_COMPLETE.md  MAANG_IMPLEMENTATION_SUMMARY.md  MAANG_SYSTEM_COMPLETE.md  MONITORING_SETUP.md  OPERATIONAL_EXCELLENCE_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYTHON_313_COMPATIBILITY_FIXES.md  README.md  README_MAANG_SYSTEM.md  ROADMAP.md  SECURITY.md  (+41 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd-pipeline.yml  ci-cd.yml  ci.yml
agents/: __init__.py  base_agent.py  citation_agent.py  data_models.py  factcheck_agent.py  lead_orchestrator.py  lead_orchestrator_fixes.py  llm_client.py  orchestrator_workflow_fixes.py  retrieval_agent.py  synthesis_agent.py
api/: __init__.py  analytics.py  analytics_v2.py  auth.py  auth_endpoints.py  auth_secure.py  cache.py  config.py  connection_pool.py  docs.py  endpoints_v1.py  endpoints_v2.py  exceptions.py  feedback_storage.py  health_checks.py  integration_layer.py  integration_monitor.py  main.py  main_secure.py  main_simple.py  main_v2.py  metrics.py  ml_integration.py  models.py  monitoring.py  performance.py  rate_limiter.py  realtime.py  recommendation_service.py  retry_logic.py  security.py  shutdown_handler.py  user_management.py  user_management_v2.py  validators.py  versioning.py  versioning_v2.py
api/database/: models.py
api/middleware/: security.py
api/patterns/: __init__.py  decorator.py  factory.py  interfaces.py  observer.py  repository.py  strategy.py
api/routes/v2/: auth.py  users.py
backend/auth/: auth.py
backend/ingestion/: ingest.py
config/: services.json
core/: cache_manager.py  config.py  elasticsearch_client.py  llm_client.py  message_broker.py  response_aggregator.py  token_budget.py  types.py  vector_client.py
core/clients/: elastic_client.py  kg_client.py  vector_db_client.py
core/integrations/: enterprise.py
core/knowledge_graph/: client.py  migration.py  schema.py
core/recommendation/: engine.py
core/semantic_analysis/: pipeline.py
data/: users.json
docker/: Dockerfile
docs/: 30-day-plan.md  user-manual.md
docs/architecture/: c4-model.md
docs/team-training/: ai-tools-guide.md
documentation/: 30-day-plan.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  user-manual.md
documentation/architecture/: c4-model.md
documentation/team-training/: ai-tools-guide.md
frontend/: ACCESSIBILITY_CHECKLIST.md  API_CONFIGURATION.md  README.md  TESTING_GUIDE.md  env.example  health-check.js  mock-backend.js  package-lock.json  package.json  simple-mock-backend.js
frontend/pwa/: service-worker.js
frontend/src/: App.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AnalyticsDashboard.jsx  AnalyticsDashboard.tsx  AnswerDisplay.tsx  CitationList.tsx  ConfidenceBadge.tsx  ErrorDisplay.tsx  FeedbackForm.tsx  Header.js  MobileSearch.jsx  QueryForm.tsx  Toast.tsx  ToastContainer.tsx
infra/api-gateway/: kong-config.yaml
infra/k8s/: api-deployment.yaml  namespace.yaml  secrets.yaml
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
infrastructure/: main.tf  variables.tf
infrastructure/kubernetes/: argo-rollouts.yaml  auto-scaling.yaml  deployment.yaml  multi-tenant.yaml
infrastructure/neo4j/: values.yaml
infrastructure/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
k8s/: api-deployment.yaml  api-service.yaml  deployment.yaml  namespace.yaml
mlops/model-registry/: mlflow-config.yaml
monitoring/: kong.yml  prometheus-config.yaml  prometheus.yml
monitoring/rules/: alerts.yml  recording.yml
orchestrator/: lead_orchestrator.py
scripts/: apply_all_fixes.sh  apply_critical_fixes.sh  check_hardcoded_values.py  cleanup-project.sh  configure_available_services.py  deploy-enterprise.sh  deploy-infrastructure.sh  deploy-production.sh  dev-setup.sh  fix_service_urls.py  generate_secure_keys.py  health-check.sh  initialize_users.py  maang_dashboard.py  maang_health_monitor.py  maang_incident_response.py  setup-dev-environment.sh  setup-team-environment.ps1  setup_and_deploy.sh  setup_elasticsearch.sh  setup_monitoring.py  setup_neo4j.sh  setup_python313.ps1  setup_python313.sh  start-backend.sh  start-frontend.sh  start_maang_system.py  test_bulletproof.sh  validate_maang_system.py  validate_requirements.py  verify_env_config.py  verify_setup.py
tests/: __init__.py  conftest.py  run_bulletproof_tests.py  run_simple_tests.py  test_agents.py  test_api_integration.py  test_bulletproof_comprehensive.py  test_complete_system.py  test_comprehensive.py  test_configuration.py  test_core_functionality.py  test_factcheck.py  test_integration.py  test_lead_orchestrator.py  test_lead_orchestrator_refactored.py  test_load.py  test_load_stress_performance.py  test_minimal_core.py  test_performance.py  test_production_readiness.py  test_prompts_comprehensive.py  test_recommendation_system.py  test_retrieval.py  test_security.py  test_security_comprehensive.py  test_simple_bulletproof.py  test_user_management_v2.py
tests/performance/: locustfile.py
(+10 files in other folders)
